10/y.output
   0  $accept : program $end

   1  $$1 :

   2  program : PROGRAM $$1 IDENT SEMICOLON outblock PERIOD

   3  outblock : var_decl_part forward_decl_part subprog_decl_part statement

   4  var_decl_part :
   5                | var_decl_list SEMICOLON

   6  var_decl_list : var_decl_list SEMICOLON var_decl
   7                | var_decl

   8  var_decl : VAR id_list

   9  forward_decl_part :
  10                    | forward_decl_list SEMICOLON

  11  forward_decl_list : forward_decl_list SEMICOLON forward_decl
  12                    | forward_decl

  13  $$2 :

  14  forward_decl : FORWARD PROCEDURE IDENT $$2 forward_arg_list

  15  $$3 :

  16  forward_decl : FORWARD FUNCTION IDENT $$3 forward_arg_list

  17  forward_arg_list :
  18                   | LPAREN forward_arg RPAREN

  19  forward_arg : forward_arg COMMA IDENT
  20              | IDENT

  21  subprog_decl_part :
  22                    | subprog_decl_list SEMICOLON

  23  subprog_decl_list : subprog_decl_list SEMICOLON subprog_decl
  24                    | subprog_decl

  25  subprog_decl : proc_decl
  26               | func_decl

  27  proc_decl : PROCEDURE proc_name SEMICOLON inblock

  28  $$4 :

  29  $$5 :

  30  proc_decl : PROCEDURE proc_name LPAREN $$4 id_list $$5 RPAREN SEMICOLON inblock

  31  proc_name : IDENT

  32  func_decl : FUNCTION func_name SEMICOLON inblock

  33  $$6 :

  34  $$7 :

  35  func_decl : FUNCTION func_name LPAREN $$6 id_list $$7 RPAREN SEMICOLON inblock

  36  func_name : IDENT

  37  $$8 :

  38  inblock : var_decl_part $$8 statement

  39  statement_list : statement_list SEMICOLON statement
  40                 | statement

  41  statement : assignment_statement

  42  $$9 :

  43  statement : $$9 if_statement

  44  $$10 :

  45  statement : $$10 while_statement
  46            | for_statement
  47            | proc_call_statement
  48            | null_statement
  49            | block_statement
  50            | read_statement
  51            | write_statement

  52  assignment_statement : variable ASSIGN expression

  53  variable : IDENT
  54           | indexed_variable

  55  $$11 :

  56  indexed_variable : variable LBRACKET expression $$11 RBRACKET

  57  $$12 :

  58  $$13 :

  59  $$14 :

  60  if_statement : IF condition $$12 THEN $$13 statement $$14 else_statement

  61  else_statement :

  62  $$15 :

  63  else_statement : ELSE $$15 statement

  64  $$16 :

  65  $$17 :

  66  $$18 :

  67  while_statement : WHILE $$16 condition $$17 DO $$18 statement

  68  $$19 :

  69  $$20 :

  70  $$21 :

  71  $$22 :

  72  $$23 :

  73  $$24 :

  74  $$25 :

  75  $$26 :

  76  $$27 :

  77  $$28 :

  78  $$29 :

  79  $$30 :

  80  $$31 :

  81  for_statement : FOR IDENT $$19 ASSIGN expression $$20 TO $$21 $$22 $$23 expression $$24 DO $$25 $$26 statement $$27 $$28 $$29 $$30 $$31

  82  proc_call_statement : proc_call_name
  83                      | proc_call_name LPAREN arg_list RPAREN

  84  proc_call_name : IDENT

  85  block_statement : SBEGIN statement_list SEND

  86  read_statement : READ LPAREN variable RPAREN

  87  write_statement : WRITE LPAREN expression RPAREN

  88  null_statement :

  89  condition : expression EQ expression
  90            | expression NEQ expression
  91            | expression LT expression
  92            | expression LE expression
  93            | expression GT expression
  94            | expression GE expression

  95  expression : term
  96             | PLUS term

  97  $$32 :

  98  expression : MINUS $$32 term
  99             | expression PLUS term
 100             | expression MINUS term

 101  term : factor
 102       | term MULT factor
 103       | term DIV factor

 104  factor : variable
 105         | NUMBER
 106         | LPAREN expression RPAREN
 107         | func_call

 108  func_call : func_call_name LPAREN arg_list RPAREN

 109  func_call_name : IDENT

 110  arg_list : expression
 111           | arg_list COMMA expression

 112  id_list : var_id
 113          | id_list COMMA var_id

 114  var_id : id_var
 115         | id_array

 116  id_var : IDENT

 117  id_array : IDENT LBRACKET NUMBER INTERVAL NUMBER RBRACKET

state 0
	$accept : . program $end  (0)

	PROGRAM  shift 1
	.  error

	program  goto 2


state 1
	program : PROGRAM . $$1 IDENT SEMICOLON outblock PERIOD  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 3


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : PROGRAM $$1 . IDENT SEMICOLON outblock PERIOD  (2)

	IDENT  shift 4
	.  error


state 4
	program : PROGRAM $$1 IDENT . SEMICOLON outblock PERIOD  (2)

	SEMICOLON  shift 5
	.  error


state 5
	program : PROGRAM $$1 IDENT SEMICOLON . outblock PERIOD  (2)
	var_decl_part : .  (4)

	VAR  shift 6
	SBEGIN  reduce 4
	FOR  reduce 4
	FORWARD  reduce 4
	FUNCTION  reduce 4
	IF  reduce 4
	PROCEDURE  reduce 4
	READ  reduce 4
	WHILE  reduce 4
	WRITE  reduce 4
	PERIOD  reduce 4
	IDENT  reduce 4

	outblock  goto 7
	var_decl_part  goto 8
	var_decl_list  goto 9
	var_decl  goto 10


state 6
	var_decl : VAR . id_list  (8)

	IDENT  shift 11
	.  error

	id_list  goto 12
	var_id  goto 13
	id_var  goto 14
	id_array  goto 15


state 7
	program : PROGRAM $$1 IDENT SEMICOLON outblock . PERIOD  (2)

	PERIOD  shift 16
	.  error


state 8
	outblock : var_decl_part . forward_decl_part subprog_decl_part statement  (3)
	forward_decl_part : .  (9)

	FORWARD  shift 17
	SBEGIN  reduce 9
	FOR  reduce 9
	FUNCTION  reduce 9
	IF  reduce 9
	PROCEDURE  reduce 9
	READ  reduce 9
	WHILE  reduce 9
	WRITE  reduce 9
	PERIOD  reduce 9
	IDENT  reduce 9

	forward_decl_part  goto 18
	forward_decl_list  goto 19
	forward_decl  goto 20


state 9
	var_decl_part : var_decl_list . SEMICOLON  (5)
	var_decl_list : var_decl_list . SEMICOLON var_decl  (6)

	SEMICOLON  shift 21
	.  error


state 10
	var_decl_list : var_decl .  (7)

	.  reduce 7


state 11
	id_var : IDENT .  (116)
	id_array : IDENT . LBRACKET NUMBER INTERVAL NUMBER RBRACKET  (117)

	LBRACKET  shift 22
	RPAREN  reduce 116
	COMMA  reduce 116
	SEMICOLON  reduce 116


state 12
	var_decl : VAR id_list .  (8)
	id_list : id_list . COMMA var_id  (113)

	COMMA  shift 23
	SEMICOLON  reduce 8


state 13
	id_list : var_id .  (112)

	.  reduce 112


state 14
	var_id : id_var .  (114)

	.  reduce 114


state 15
	var_id : id_array .  (115)

	.  reduce 115


state 16
	program : PROGRAM $$1 IDENT SEMICOLON outblock PERIOD .  (2)

	.  reduce 2


state 17
	forward_decl : FORWARD . PROCEDURE IDENT $$2 forward_arg_list  (14)
	forward_decl : FORWARD . FUNCTION IDENT $$3 forward_arg_list  (16)

	FUNCTION  shift 24
	PROCEDURE  shift 25
	.  error


state 18
	outblock : var_decl_part forward_decl_part . subprog_decl_part statement  (3)
	subprog_decl_part : .  (21)

	FUNCTION  shift 26
	PROCEDURE  shift 27
	SBEGIN  reduce 21
	FOR  reduce 21
	IF  reduce 21
	READ  reduce 21
	WHILE  reduce 21
	WRITE  reduce 21
	PERIOD  reduce 21
	IDENT  reduce 21

	subprog_decl_part  goto 28
	subprog_decl_list  goto 29
	subprog_decl  goto 30
	proc_decl  goto 31
	func_decl  goto 32


state 19
	forward_decl_part : forward_decl_list . SEMICOLON  (10)
	forward_decl_list : forward_decl_list . SEMICOLON forward_decl  (11)

	SEMICOLON  shift 33
	.  error


state 20
	forward_decl_list : forward_decl .  (12)

	.  reduce 12


state 21
	var_decl_part : var_decl_list SEMICOLON .  (5)
	var_decl_list : var_decl_list SEMICOLON . var_decl  (6)

	VAR  shift 6
	SBEGIN  reduce 5
	FOR  reduce 5
	FORWARD  reduce 5
	FUNCTION  reduce 5
	IF  reduce 5
	PROCEDURE  reduce 5
	READ  reduce 5
	WHILE  reduce 5
	WRITE  reduce 5
	SEMICOLON  reduce 5
	PERIOD  reduce 5
	IDENT  reduce 5

	var_decl  goto 34


state 22
	id_array : IDENT LBRACKET . NUMBER INTERVAL NUMBER RBRACKET  (117)

	NUMBER  shift 35
	.  error


state 23
	id_list : id_list COMMA . var_id  (113)

	IDENT  shift 11
	.  error

	var_id  goto 36
	id_var  goto 14
	id_array  goto 15


state 24
	forward_decl : FORWARD FUNCTION . IDENT $$3 forward_arg_list  (16)

	IDENT  shift 37
	.  error


state 25
	forward_decl : FORWARD PROCEDURE . IDENT $$2 forward_arg_list  (14)

	IDENT  shift 38
	.  error


state 26
	func_decl : FUNCTION . func_name SEMICOLON inblock  (32)
	func_decl : FUNCTION . func_name LPAREN $$6 id_list $$7 RPAREN SEMICOLON inblock  (35)

	IDENT  shift 39
	.  error

	func_name  goto 40


state 27
	proc_decl : PROCEDURE . proc_name SEMICOLON inblock  (27)
	proc_decl : PROCEDURE . proc_name LPAREN $$4 id_list $$5 RPAREN SEMICOLON inblock  (30)

	IDENT  shift 41
	.  error

	proc_name  goto 42


state 28
	outblock : var_decl_part forward_decl_part subprog_decl_part . statement  (3)
	$$9 : .  (42)
	$$10 : .  (44)
	null_statement : .  (88)

	SBEGIN  shift 43
	FOR  shift 44
	READ  shift 45
	WRITE  shift 46
	IDENT  shift 47
	IF  reduce 42
	WHILE  reduce 44
	PERIOD  reduce 88

	variable  goto 48
	statement  goto 49
	assignment_statement  goto 50
	$$9  goto 51
	$$10  goto 52
	for_statement  goto 53
	proc_call_statement  goto 54
	null_statement  goto 55
	block_statement  goto 56
	read_statement  goto 57
	write_statement  goto 58
	indexed_variable  goto 59
	proc_call_name  goto 60


state 29
	subprog_decl_part : subprog_decl_list . SEMICOLON  (22)
	subprog_decl_list : subprog_decl_list . SEMICOLON subprog_decl  (23)

	SEMICOLON  shift 61
	.  error


state 30
	subprog_decl_list : subprog_decl .  (24)

	.  reduce 24


state 31
	subprog_decl : proc_decl .  (25)

	.  reduce 25


state 32
	subprog_decl : func_decl .  (26)

	.  reduce 26


state 33
	forward_decl_part : forward_decl_list SEMICOLON .  (10)
	forward_decl_list : forward_decl_list SEMICOLON . forward_decl  (11)

	FORWARD  shift 17
	SBEGIN  reduce 10
	FOR  reduce 10
	FUNCTION  reduce 10
	IF  reduce 10
	PROCEDURE  reduce 10
	READ  reduce 10
	WHILE  reduce 10
	WRITE  reduce 10
	PERIOD  reduce 10
	IDENT  reduce 10

	forward_decl  goto 62


state 34
	var_decl_list : var_decl_list SEMICOLON var_decl .  (6)

	.  reduce 6


state 35
	id_array : IDENT LBRACKET NUMBER . INTERVAL NUMBER RBRACKET  (117)

	INTERVAL  shift 63
	.  error


state 36
	id_list : id_list COMMA var_id .  (113)

	.  reduce 113


state 37
	forward_decl : FORWARD FUNCTION IDENT . $$3 forward_arg_list  (16)
	$$3 : .  (15)

	.  reduce 15

	$$3  goto 64


state 38
	forward_decl : FORWARD PROCEDURE IDENT . $$2 forward_arg_list  (14)
	$$2 : .  (13)

	.  reduce 13

	$$2  goto 65


state 39
	func_name : IDENT .  (36)

	.  reduce 36


state 40
	func_decl : FUNCTION func_name . SEMICOLON inblock  (32)
	func_decl : FUNCTION func_name . LPAREN $$6 id_list $$7 RPAREN SEMICOLON inblock  (35)

	LPAREN  shift 66
	SEMICOLON  shift 67
	.  error


state 41
	proc_name : IDENT .  (31)

	.  reduce 31


state 42
	proc_decl : PROCEDURE proc_name . SEMICOLON inblock  (27)
	proc_decl : PROCEDURE proc_name . LPAREN $$4 id_list $$5 RPAREN SEMICOLON inblock  (30)

	LPAREN  shift 68
	SEMICOLON  shift 69
	.  error


state 43
	block_statement : SBEGIN . statement_list SEND  (85)
	$$9 : .  (42)
	$$10 : .  (44)
	null_statement : .  (88)

	SBEGIN  shift 43
	FOR  shift 44
	READ  shift 45
	WRITE  shift 46
	IDENT  shift 47
	SEND  reduce 88
	IF  reduce 42
	WHILE  reduce 44
	SEMICOLON  reduce 88

	variable  goto 48
	statement  goto 70
	statement_list  goto 71
	assignment_statement  goto 50
	$$9  goto 51
	$$10  goto 52
	for_statement  goto 53
	proc_call_statement  goto 54
	null_statement  goto 55
	block_statement  goto 56
	read_statement  goto 57
	write_statement  goto 58
	indexed_variable  goto 59
	proc_call_name  goto 60


state 44
	for_statement : FOR . IDENT $$19 ASSIGN expression $$20 TO $$21 $$22 $$23 expression $$24 DO $$25 $$26 statement $$27 $$28 $$29 $$30 $$31  (81)

	IDENT  shift 72
	.  error


state 45
	read_statement : READ . LPAREN variable RPAREN  (86)

	LPAREN  shift 73
	.  error


state 46
	write_statement : WRITE . LPAREN expression RPAREN  (87)

	LPAREN  shift 74
	.  error


state 47
	variable : IDENT .  (53)
	proc_call_name : IDENT .  (84)

	ELSE  reduce 84
	SEND  reduce 84
	LPAREN  reduce 84
	LBRACKET  reduce 53
	SEMICOLON  reduce 84
	PERIOD  reduce 84
	ASSIGN  reduce 53


state 48
	assignment_statement : variable . ASSIGN expression  (52)
	indexed_variable : variable . LBRACKET expression $$11 RBRACKET  (56)

	LBRACKET  shift 75
	ASSIGN  shift 76
	.  error


state 49
	outblock : var_decl_part forward_decl_part subprog_decl_part statement .  (3)

	.  reduce 3


state 50
	statement : assignment_statement .  (41)

	.  reduce 41


state 51
	statement : $$9 . if_statement  (43)

	IF  shift 77
	.  error

	if_statement  goto 78


state 52
	statement : $$10 . while_statement  (45)

	WHILE  shift 79
	.  error

	while_statement  goto 80


state 53
	statement : for_statement .  (46)

	.  reduce 46


state 54
	statement : proc_call_statement .  (47)

	.  reduce 47


state 55
	statement : null_statement .  (48)

	.  reduce 48


state 56
	statement : block_statement .  (49)

	.  reduce 49


state 57
	statement : read_statement .  (50)

	.  reduce 50


state 58
	statement : write_statement .  (51)

	.  reduce 51


state 59
	variable : indexed_variable .  (54)

	.  reduce 54


state 60
	proc_call_statement : proc_call_name .  (82)
	proc_call_statement : proc_call_name . LPAREN arg_list RPAREN  (83)

	LPAREN  shift 81
	ELSE  reduce 82
	SEND  reduce 82
	SEMICOLON  reduce 82
	PERIOD  reduce 82


state 61
	subprog_decl_part : subprog_decl_list SEMICOLON .  (22)
	subprog_decl_list : subprog_decl_list SEMICOLON . subprog_decl  (23)

	FUNCTION  shift 26
	PROCEDURE  shift 27
	SBEGIN  reduce 22
	FOR  reduce 22
	IF  reduce 22
	READ  reduce 22
	WHILE  reduce 22
	WRITE  reduce 22
	PERIOD  reduce 22
	IDENT  reduce 22

	subprog_decl  goto 82
	proc_decl  goto 31
	func_decl  goto 32


state 62
	forward_decl_list : forward_decl_list SEMICOLON forward_decl .  (11)

	.  reduce 11


state 63
	id_array : IDENT LBRACKET NUMBER INTERVAL . NUMBER RBRACKET  (117)

	NUMBER  shift 83
	.  error


state 64
	forward_decl : FORWARD FUNCTION IDENT $$3 . forward_arg_list  (16)
	forward_arg_list : .  (17)

	LPAREN  shift 84
	SEMICOLON  reduce 17

	forward_arg_list  goto 85


state 65
	forward_decl : FORWARD PROCEDURE IDENT $$2 . forward_arg_list  (14)
	forward_arg_list : .  (17)

	LPAREN  shift 84
	SEMICOLON  reduce 17

	forward_arg_list  goto 86


state 66
	func_decl : FUNCTION func_name LPAREN . $$6 id_list $$7 RPAREN SEMICOLON inblock  (35)
	$$6 : .  (33)

	.  reduce 33

	$$6  goto 87


state 67
	func_decl : FUNCTION func_name SEMICOLON . inblock  (32)
	var_decl_part : .  (4)

	VAR  shift 6
	SBEGIN  reduce 4
	FOR  reduce 4
	IF  reduce 4
	READ  reduce 4
	WHILE  reduce 4
	WRITE  reduce 4
	SEMICOLON  reduce 4
	IDENT  reduce 4

	var_decl_part  goto 88
	var_decl_list  goto 9
	var_decl  goto 10
	inblock  goto 89


state 68
	proc_decl : PROCEDURE proc_name LPAREN . $$4 id_list $$5 RPAREN SEMICOLON inblock  (30)
	$$4 : .  (28)

	.  reduce 28

	$$4  goto 90


state 69
	proc_decl : PROCEDURE proc_name SEMICOLON . inblock  (27)
	var_decl_part : .  (4)

	VAR  shift 6
	SBEGIN  reduce 4
	FOR  reduce 4
	IF  reduce 4
	READ  reduce 4
	WHILE  reduce 4
	WRITE  reduce 4
	SEMICOLON  reduce 4
	IDENT  reduce 4

	var_decl_part  goto 88
	var_decl_list  goto 9
	var_decl  goto 10
	inblock  goto 91


state 70
	statement_list : statement .  (40)

	.  reduce 40


state 71
	statement_list : statement_list . SEMICOLON statement  (39)
	block_statement : SBEGIN statement_list . SEND  (85)

	SEND  shift 92
	SEMICOLON  shift 93
	.  error


state 72
	for_statement : FOR IDENT . $$19 ASSIGN expression $$20 TO $$21 $$22 $$23 expression $$24 DO $$25 $$26 statement $$27 $$28 $$29 $$30 $$31  (81)
	$$19 : .  (68)

	.  reduce 68

	$$19  goto 94


state 73
	read_statement : READ LPAREN . variable RPAREN  (86)

	IDENT  shift 95
	.  error

	variable  goto 96
	indexed_variable  goto 59


state 74
	write_statement : WRITE LPAREN . expression RPAREN  (87)

	PLUS  shift 97
	MINUS  shift 98
	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	expression  goto 103
	indexed_variable  goto 59
	term  goto 104
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 75
	indexed_variable : variable LBRACKET . expression $$11 RBRACKET  (56)

	PLUS  shift 97
	MINUS  shift 98
	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	expression  goto 108
	indexed_variable  goto 59
	term  goto 104
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 76
	assignment_statement : variable ASSIGN . expression  (52)

	PLUS  shift 97
	MINUS  shift 98
	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	expression  goto 109
	indexed_variable  goto 59
	term  goto 104
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 77
	if_statement : IF . condition $$12 THEN $$13 statement $$14 else_statement  (60)

	PLUS  shift 97
	MINUS  shift 98
	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	expression  goto 110
	indexed_variable  goto 59
	condition  goto 111
	term  goto 104
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 78
	statement : $$9 if_statement .  (43)

	.  reduce 43


state 79
	while_statement : WHILE . $$16 condition $$17 DO $$18 statement  (67)
	$$16 : .  (64)

	.  reduce 64

	$$16  goto 112


state 80
	statement : $$10 while_statement .  (45)

	.  reduce 45


state 81
	proc_call_statement : proc_call_name LPAREN . arg_list RPAREN  (83)

	PLUS  shift 97
	MINUS  shift 98
	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	expression  goto 113
	indexed_variable  goto 59
	arg_list  goto 114
	term  goto 104
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 82
	subprog_decl_list : subprog_decl_list SEMICOLON subprog_decl .  (23)

	.  reduce 23


state 83
	id_array : IDENT LBRACKET NUMBER INTERVAL NUMBER . RBRACKET  (117)

	RBRACKET  shift 115
	.  error


state 84
	forward_arg_list : LPAREN . forward_arg RPAREN  (18)

	IDENT  shift 116
	.  error

	forward_arg  goto 117


state 85
	forward_decl : FORWARD FUNCTION IDENT $$3 forward_arg_list .  (16)

	.  reduce 16


state 86
	forward_decl : FORWARD PROCEDURE IDENT $$2 forward_arg_list .  (14)

	.  reduce 14


state 87
	func_decl : FUNCTION func_name LPAREN $$6 . id_list $$7 RPAREN SEMICOLON inblock  (35)

	IDENT  shift 11
	.  error

	id_list  goto 118
	var_id  goto 13
	id_var  goto 14
	id_array  goto 15


state 88
	inblock : var_decl_part . $$8 statement  (38)
	$$8 : .  (37)

	.  reduce 37

	$$8  goto 119


state 89
	func_decl : FUNCTION func_name SEMICOLON inblock .  (32)

	.  reduce 32


state 90
	proc_decl : PROCEDURE proc_name LPAREN $$4 . id_list $$5 RPAREN SEMICOLON inblock  (30)

	IDENT  shift 11
	.  error

	id_list  goto 120
	var_id  goto 13
	id_var  goto 14
	id_array  goto 15


state 91
	proc_decl : PROCEDURE proc_name SEMICOLON inblock .  (27)

	.  reduce 27


state 92
	block_statement : SBEGIN statement_list SEND .  (85)

	.  reduce 85


state 93
	statement_list : statement_list SEMICOLON . statement  (39)
	$$9 : .  (42)
	$$10 : .  (44)
	null_statement : .  (88)

	SBEGIN  shift 43
	FOR  shift 44
	READ  shift 45
	WRITE  shift 46
	IDENT  shift 47
	SEND  reduce 88
	IF  reduce 42
	WHILE  reduce 44
	SEMICOLON  reduce 88

	variable  goto 48
	statement  goto 121
	assignment_statement  goto 50
	$$9  goto 51
	$$10  goto 52
	for_statement  goto 53
	proc_call_statement  goto 54
	null_statement  goto 55
	block_statement  goto 56
	read_statement  goto 57
	write_statement  goto 58
	indexed_variable  goto 59
	proc_call_name  goto 60


state 94
	for_statement : FOR IDENT $$19 . ASSIGN expression $$20 TO $$21 $$22 $$23 expression $$24 DO $$25 $$26 statement $$27 $$28 $$29 $$30 $$31  (81)

	ASSIGN  shift 122
	.  error


state 95
	variable : IDENT .  (53)

	.  reduce 53


state 96
	indexed_variable : variable . LBRACKET expression $$11 RBRACKET  (56)
	read_statement : READ LPAREN variable . RPAREN  (86)

	RPAREN  shift 123
	LBRACKET  shift 75
	.  error


state 97
	expression : PLUS . term  (96)

	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	indexed_variable  goto 59
	term  goto 124
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 98
	expression : MINUS . $$32 term  (98)
	$$32 : .  (97)

	.  reduce 97

	$$32  goto 125


state 99
	factor : LPAREN . expression RPAREN  (106)

	PLUS  shift 97
	MINUS  shift 98
	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	expression  goto 126
	indexed_variable  goto 59
	term  goto 104
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 100
	factor : NUMBER .  (105)

	.  reduce 105


state 101
	variable : IDENT .  (53)
	func_call_name : IDENT .  (109)

	DO  reduce 53
	ELSE  reduce 53
	SEND  reduce 53
	THEN  reduce 53
	TO  reduce 53
	PLUS  reduce 53
	MINUS  reduce 53
	MULT  reduce 53
	DIV  reduce 53
	EQ  reduce 53
	NEQ  reduce 53
	LE  reduce 53
	LT  reduce 53
	GE  reduce 53
	GT  reduce 53
	LPAREN  reduce 109
	RPAREN  reduce 53
	LBRACKET  reduce 53
	RBRACKET  reduce 53
	COMMA  reduce 53
	SEMICOLON  reduce 53
	PERIOD  reduce 53


state 102
	indexed_variable : variable . LBRACKET expression $$11 RBRACKET  (56)
	factor : variable .  (104)

	LBRACKET  shift 75
	DO  reduce 104
	ELSE  reduce 104
	SEND  reduce 104
	THEN  reduce 104
	TO  reduce 104
	PLUS  reduce 104
	MINUS  reduce 104
	MULT  reduce 104
	DIV  reduce 104
	EQ  reduce 104
	NEQ  reduce 104
	LE  reduce 104
	LT  reduce 104
	GE  reduce 104
	GT  reduce 104
	RPAREN  reduce 104
	RBRACKET  reduce 104
	COMMA  reduce 104
	SEMICOLON  reduce 104
	PERIOD  reduce 104


state 103
	write_statement : WRITE LPAREN expression . RPAREN  (87)
	expression : expression . PLUS term  (99)
	expression : expression . MINUS term  (100)

	PLUS  shift 127
	MINUS  shift 128
	RPAREN  shift 129
	.  error


state 104
	expression : term .  (95)
	term : term . MULT factor  (102)
	term : term . DIV factor  (103)

	MULT  shift 130
	DIV  shift 131
	DO  reduce 95
	ELSE  reduce 95
	SEND  reduce 95
	THEN  reduce 95
	TO  reduce 95
	PLUS  reduce 95
	MINUS  reduce 95
	EQ  reduce 95
	NEQ  reduce 95
	LE  reduce 95
	LT  reduce 95
	GE  reduce 95
	GT  reduce 95
	RPAREN  reduce 95
	RBRACKET  reduce 95
	COMMA  reduce 95
	SEMICOLON  reduce 95
	PERIOD  reduce 95


state 105
	term : factor .  (101)

	.  reduce 101


state 106
	factor : func_call .  (107)

	.  reduce 107


state 107
	func_call : func_call_name . LPAREN arg_list RPAREN  (108)

	LPAREN  shift 132
	.  error


state 108
	indexed_variable : variable LBRACKET expression . $$11 RBRACKET  (56)
	expression : expression . PLUS term  (99)
	expression : expression . MINUS term  (100)
	$$11 : .  (55)

	PLUS  shift 127
	MINUS  shift 128
	RBRACKET  reduce 55

	$$11  goto 133


state 109
	assignment_statement : variable ASSIGN expression .  (52)
	expression : expression . PLUS term  (99)
	expression : expression . MINUS term  (100)

	PLUS  shift 127
	MINUS  shift 128
	ELSE  reduce 52
	SEND  reduce 52
	SEMICOLON  reduce 52
	PERIOD  reduce 52


state 110
	condition : expression . EQ expression  (89)
	condition : expression . NEQ expression  (90)
	condition : expression . LT expression  (91)
	condition : expression . LE expression  (92)
	condition : expression . GT expression  (93)
	condition : expression . GE expression  (94)
	expression : expression . PLUS term  (99)
	expression : expression . MINUS term  (100)

	PLUS  shift 127
	MINUS  shift 128
	EQ  shift 134
	NEQ  shift 135
	LE  shift 136
	LT  shift 137
	GE  shift 138
	GT  shift 139
	.  error


state 111
	if_statement : IF condition . $$12 THEN $$13 statement $$14 else_statement  (60)
	$$12 : .  (57)

	.  reduce 57

	$$12  goto 140


state 112
	while_statement : WHILE $$16 . condition $$17 DO $$18 statement  (67)

	PLUS  shift 97
	MINUS  shift 98
	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	expression  goto 110
	indexed_variable  goto 59
	condition  goto 141
	term  goto 104
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 113
	expression : expression . PLUS term  (99)
	expression : expression . MINUS term  (100)
	arg_list : expression .  (110)

	PLUS  shift 127
	MINUS  shift 128
	RPAREN  reduce 110
	COMMA  reduce 110


state 114
	proc_call_statement : proc_call_name LPAREN arg_list . RPAREN  (83)
	arg_list : arg_list . COMMA expression  (111)

	RPAREN  shift 142
	COMMA  shift 143
	.  error


state 115
	id_array : IDENT LBRACKET NUMBER INTERVAL NUMBER RBRACKET .  (117)

	.  reduce 117


state 116
	forward_arg : IDENT .  (20)

	.  reduce 20


state 117
	forward_arg_list : LPAREN forward_arg . RPAREN  (18)
	forward_arg : forward_arg . COMMA IDENT  (19)

	RPAREN  shift 144
	COMMA  shift 145
	.  error


state 118
	func_decl : FUNCTION func_name LPAREN $$6 id_list . $$7 RPAREN SEMICOLON inblock  (35)
	id_list : id_list . COMMA var_id  (113)
	$$7 : .  (34)

	COMMA  shift 23
	RPAREN  reduce 34

	$$7  goto 146


state 119
	inblock : var_decl_part $$8 . statement  (38)
	$$9 : .  (42)
	$$10 : .  (44)
	null_statement : .  (88)

	SBEGIN  shift 43
	FOR  shift 44
	READ  shift 45
	WRITE  shift 46
	IDENT  shift 47
	IF  reduce 42
	WHILE  reduce 44
	SEMICOLON  reduce 88

	variable  goto 48
	statement  goto 147
	assignment_statement  goto 50
	$$9  goto 51
	$$10  goto 52
	for_statement  goto 53
	proc_call_statement  goto 54
	null_statement  goto 55
	block_statement  goto 56
	read_statement  goto 57
	write_statement  goto 58
	indexed_variable  goto 59
	proc_call_name  goto 60


state 120
	proc_decl : PROCEDURE proc_name LPAREN $$4 id_list . $$5 RPAREN SEMICOLON inblock  (30)
	id_list : id_list . COMMA var_id  (113)
	$$5 : .  (29)

	COMMA  shift 23
	RPAREN  reduce 29

	$$5  goto 148


state 121
	statement_list : statement_list SEMICOLON statement .  (39)

	.  reduce 39


state 122
	for_statement : FOR IDENT $$19 ASSIGN . expression $$20 TO $$21 $$22 $$23 expression $$24 DO $$25 $$26 statement $$27 $$28 $$29 $$30 $$31  (81)

	PLUS  shift 97
	MINUS  shift 98
	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	expression  goto 149
	indexed_variable  goto 59
	term  goto 104
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 123
	read_statement : READ LPAREN variable RPAREN .  (86)

	.  reduce 86


state 124
	expression : PLUS term .  (96)
	term : term . MULT factor  (102)
	term : term . DIV factor  (103)

	MULT  shift 130
	DIV  shift 131
	DO  reduce 96
	ELSE  reduce 96
	SEND  reduce 96
	THEN  reduce 96
	TO  reduce 96
	PLUS  reduce 96
	MINUS  reduce 96
	EQ  reduce 96
	NEQ  reduce 96
	LE  reduce 96
	LT  reduce 96
	GE  reduce 96
	GT  reduce 96
	RPAREN  reduce 96
	RBRACKET  reduce 96
	COMMA  reduce 96
	SEMICOLON  reduce 96
	PERIOD  reduce 96


state 125
	expression : MINUS $$32 . term  (98)

	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	indexed_variable  goto 59
	term  goto 150
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 126
	expression : expression . PLUS term  (99)
	expression : expression . MINUS term  (100)
	factor : LPAREN expression . RPAREN  (106)

	PLUS  shift 127
	MINUS  shift 128
	RPAREN  shift 151
	.  error


state 127
	expression : expression PLUS . term  (99)

	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error

	variable  goto 102
	indexed_variable  goto 59
	term  goto 152
	factor  goto 105
	func_call  goto 106
	func_call_name  goto 107


state 128
	expression : expression MINUS . term  (100)

	LPAREN  shift 99
	NUMBER  shift 100
	IDENT  shift 101
	.  error
